--- a/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeerlingRepo.cshtml
@@ -136,4 +136,12 @@
         db.Execute(updateCommand, aangemeld, id);
         db.Close();
     }
+
+    public static void UpdateMailVerzorger(string mailVerzorger, int id)
+    {
+        var db = Database.Open(App.DataBase);
+        var updateCommand = "UPDATE Leerling SET LCASE(MailVerzorger) = @0 where UserId = @1";
+        db.Execute(updateCommand, mailVerzorger, id);
+        db.Close();
+    }
 }
