--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -10,6 +10,10 @@
         <span class="glyphicon glyphicon-user"></span> Decaan overzicht
     </a>
 }
+
+<a href="~/Decaan/Lokaal/LokaalOverzicht.cshtml" class="btn btn-default" role="button">
+    <span class="glyphicon glyphicon-pencil"></span>&nbsp; Lokaal Overzicht
+</a>
 <a href="~/Decaan/Mail/MailOverzicht.cshtml" class="btn btn-default" role="button">
     <span class="glyphicon glyphicon-pencil"></span>&nbsp; Mail Overzicht
 </a>
