--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
@@ -7,31 +7,28 @@
         Response.Redirect("~/");
     }
 
-    if (IsPost && Request.Form["submitKeuze"] != null)
+    if (IsPost && Request.Form["lokaalToevoegen"] != null)
     {
         string lokaalNaam = "";
         int capaciteit = -1;
         Validation.RequireField("lokaalNaam", "Geef een lokaalnaam op");
         Validation.RequireField("capaciteit", "Geef de capaciteit van het lokaal aan");
 
-        if(Request.Form["lokaalNaam"] != null) {string lokaalNaam = Request.Form["lokaalNaam"];}
-        if(Request.Form["capaciteit"] != null) {int capaciteit = Convert.ToInt16(Request.Form["capaciteit"]);}
+        if(Request.Form["lokaalNaam"] != null) {lokaalNaam = Request.Form["lokaalNaam"];}
+        if(Request.Form["capaciteit"] != "") {capaciteit = Convert.ToInt16(Request.Form["capaciteit"]);}
     
         if(Validation.IsValid())
         {
             LokaalRepo.MakeLokaal(lokaalNaam, capaciteit);
-            Response.Redirect(Request.Url.AbsoluteUri);
         }
     }
 }
 
-<form id="submitKeuze" method="post" enctype="multipart/form-data">
-    <fieldset>
-        @Html.ValidationSummary()
-        <input type="text" name="lokaalNaam">
-        <input type="number" name="capaciteit" min="1" value="30">
-        <button type="submit" name="lokaalToevoegen" class="btn btn-success">
-            <span class="glyphicon glyphicon-plus"></span> Continue
-        </button>
-    </fieldset>
+<form method="post" class="form-inline">
+    @Html.ValidationSummary()
+    <input type="text" name="lokaalNaam">
+    <input type="number" name="capaciteit" min="1" value="30">
+    <button type="submit" id="submit" name="lokaalToevoegen" class="btn btn-success">
+        <span class="glyphicon glyphicon-plus"></span> Submit
+    </button>
 </form>
