--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -153,7 +153,7 @@
             </tr>
         }
     </table>
-    <input type="text" name="mailVerzorger" placeholder="voorbeeld@provider.frl" value="@leerling.MailVerzorger"> Mail van je ouder/verzorger
+    <input type="text" name="mailVerzorger" placeholder="voorbeeld@provider.frl" value="@leerling.MailVerzorger"> <span>Mail van je ouder/verzorger</span> <br>
     <button type="submit" id="submit" name="submitKeuze" class="btn btn-success">
         <span class="glyphicon glyphicon-plus"></span> Submit
     </button>
