--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -122,7 +122,7 @@
 <h4>Vul hier uw keuzes in.</h4>
 @Html.ValidationSummary()
 <form method="post" class="form-inline">
-    <table class="table" id="#table-nostripes">
+    <table class="table" id="table-nostripes">
         <tr>
             <td>Vak</td>
             <td>Aantal mensen</td>
