--- a/ComeniusCarrousel/Leerling/Keuze.cshtml
+++ b/ComeniusCarrousel/Leerling/Keuze.cshtml
@@ -155,6 +155,6 @@
     </table>
     <input type="text" name="mailVerzorger" placeholder="voorbeeld@mail.frl" value="@leerling.MailVerzorger" class="form-control"> <span>Mail van je ouder/verzorger</span> <br>
     <button type="submit" id="submit" name="submitKeuze" class="btn btn-success">
-        <span class="glyphicon glyphicon-plus"></span> Submit
+        <span class="glyphicon glyphicon-plus"></span> Verzenden
     </button>
 </form>
