Push it to the limit. VakWijzigen

--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
@@ -23,7 +23,7 @@
 {
     <p>
         <span>Lokaal:</span>
-        <span>@user</span>
+        <span>@lokaal.LokaalNaam</span>
     </p>
     <form method="post" class="form-inline">
         <button type="submit" id="submit" name="delete" class="btn btn-danger">
