--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -14,6 +14,10 @@
 <a href="~/Decaan/Lokaal/LokaalOverzicht.cshtml" class="btn btn-default" role="button">
     <span class="glyphicon glyphicon-pencil"></span>&nbsp; Lokaal Overzicht
 </a>
+
+<a href="~/Decaan/Vak/VakOverzicht.cshtml" class="btn btn-default" role="button">
+    <span class="glyphicon glyphicon-pencil"></span>&nbsp; Vak Overzicht
+</a>
 <a href="~/Decaan/Mail/MailOverzicht.cshtml" class="btn btn-default" role="button">
     <span class="glyphicon glyphicon-pencil"></span>&nbsp; Mail Overzicht
 </a>
