Logo, favicon fix

--- a/ComeniusCarrousel/_Layout.cshtml
+++ b/ComeniusCarrousel/_Layout.cshtml
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8" />
         <title>@Page.Title</title>
-        <link rel="icon" href="favicon.png">
+        <link rel="icon" href="~/favicon.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="~/css/bootstrap.css" type="text/css">
         <link href="~/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
         <div class="page-header">
             <div class="container">
                 <div id="floatLeft">
-                    <h1>[CSG Comenius]</h1>
+                    <img src="~/Logo Comenius SVG Grayscale.svg" alt="Comenius Logo" style="width: 320px; margin-top: 24px;"/>
                 </div>
                 <div id="floatRight">
                     <a href="~/" style="color: #fff;">
