--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalToevoegen.cshtml
@@ -26,8 +26,8 @@
 
 <form method="post" class="form-inline">
     @Html.ValidationSummary()
-    <input type="text" name="lokaalNaam">
-    <input type="number" name="capaciteit" min="1" value="30">
+    <input type="text" name="lokaalNaam"><br>
+    <input type="number" name="capaciteit" min="1" value="30"><br>
     <button type="submit" id="submit" name="lokaalToevoegen" class="btn btn-success">
         <span class="glyphicon glyphicon-plus"></span> Verzenden
     </button>
