--- a/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
+++ b/ComeniusCarrousel/Decaan/Vak/VakToevoegen.cshtml
@@ -14,8 +14,8 @@
         Validation.RequireField("vakNaam", "Geef een vaknaam op");
         Validation.RequireField("niveau", "Geef het niveau aan");
 
-        if(Request.Form["vakNaam"] != null) {lokaalNaam = Request.Form["vakNaam"];}
-        if(Request.Form["niveau"] != "") {capaciteit = Request.Form["niveau"];}
+        if(Request.Form["vakNaam"] != null) {vakNaam = Request.Form["vakNaam"];}
+        if(Request.Form["niveau"] != null) {niveau = Request.Form["niveau"];}
     
         if(Validation.IsValid())
         {
@@ -26,11 +26,11 @@
 
 <form method="post" class="form-inline">
     @Html.ValidationSummary()
-    <input type="text" name="vakNaam">
+    <input type="text" name="vakNaam"><br>
     <select name="niveau" class="form-control">
         <option value="HAVO">HAVO</option>
         <option value="VWO">VWO</option>
-    </select>
+    </select><br>
     <button type="submit" id="submit" name="vakToevoegen" class="btn btn-success">
         <span class="glyphicon glyphicon-plus"></span> Verzenden
     </button>
