--- a/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/LeraarRepo.cshtml
@@ -16,7 +16,7 @@
         {
             get{return voorlichtingVak;} 
             set{
-                Repository.CRUD.doSimpleIdUpdate(table, "Klas", value, idName, userId);
+                Repository.CRUD.doSimpleIdUpdate(table, "Leraar", value, idName, userId);
             }
         }
     }
