--- a/ComeniusCarrousel/Decaan/_Decaan.cshtml
+++ b/ComeniusCarrousel/Decaan/_Decaan.cshtml
@@ -18,6 +18,10 @@
 <a href="~/Decaan/Vak/VakOverzicht.cshtml" class="btn btn-default" role="button">
     <span class="glyphicon glyphicon-pencil"></span>&nbsp; Vak Overzicht
 </a>
+
+<a href="~/Decaan/Leraar/LeraarOverzicht.cshtml" class="btn btn-default" role="button">
+    <span class="glyphicon glyphicon-pencil"></span>&nbsp; Leraar Overzicht
+</a>
 <a href="~/Decaan/Mail/MailOverzicht.cshtml" class="btn btn-default" role="button">
     <span class="glyphicon glyphicon-pencil"></span>&nbsp; Mail Overzicht
 </a>
