--- a/ComeniusCarrousel/App_Code/VakRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/VakRepo.cshtml
@@ -79,7 +79,14 @@
     {
         var db = Database.Open(App.DataBase);
         var deleteCommand = "DELETE FROM Vak WHERE VakId = @0";
+        var deleteKeuzeCommand = "DELETE FROM Keuze WHERE VakId = @0";
+        var voorlichtingData = db.Query("SELECT VoorlichtingId FROM Voorlichting Where VakId = @0", id);
         db.Execute(deleteCommand, id);
+        db.Execute(deleteKeuzeCommand, id);
+        foreach (var row in voorlichtingData)
+        {
+            VoorlichtingRepo.DeleteVoorlichting(row.VoorlichtingId);
+        }
         db.Close();
     }
 }
