--- a/ComeniusCarrousel/App_Code/VoorlichtingRepo.cshtml
+++ b/ComeniusCarrousel/App_Code/VoorlichtingRepo.cshtml
@@ -101,6 +101,7 @@
     {
         var db = Database.Open(App.DataBase);
         var deleteCommand = "DELETE FROM Voorlichting WHERE VoorlichtingId = @0";
+        var deleteRoosterCommand = "DELETE FROM Rooster WHERE VoorlichtingId = @0";
         db.Execute(deleteCommand, id);
         db.Close();
     }
