--- a/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
+++ b/ComeniusCarrousel/Decaan/Lokaal/LokaalWijzigen.cshtml
@@ -15,7 +15,11 @@
         Validation.AddFormError("Dit lokaal bestaat niet.");
     }
 
-    // IMPLEMENT SOMETHING HERE!
+    if (IsPost && Request.Form["delete"] != null)
+    {
+        VakRepo.DeleteVak(id);
+        Response.Redirect("~/Decaan/Vak/VakOverzicht");
+    }
 }
 
 @Html.ValidationSummary()
